@@ -3,20 +3,12 @@
 plugins {
     id 'java'
     id 'java-library'
-    id 'edu.sc.seis.launch4j' version '2.5.4'
     id 'com.diffplug.spotless' version '6.7.2'
-    id 'org.javamodularity.moduleplugin' version '1.8.12'
-    id 'org.openjfx.javafxplugin' version '0.0.13'
 }
 
 group 'com.github.wohaopa'
 version '0.3.0'
 
-
-javafx {
-    version = '17.0.2'
-    modules = ['javafx.controls', 'javafx.media', "javafx.swing"]
-}
 
 repositories {
     maven {
@@ -29,56 +21,6 @@ spotless {
         googleJavaFormat()
     }
 }
-
-launch4j {
-    mainClassName = 'com.github.wohaopa.zpl.ui.Main'
-    outfile = 'ZPL.exe'
-    language = 'SIMPLIFIED_CHINESE'
-    fileDescription = 'ZeroPointLaunch, a dedicated starter for GTNH.'
-    companyName = 'wohaopa'
-    copyright = companyName
-    messagesStartupError = 'Startup error!'
-    messagesLauncherError = 'Launcher Error'
-    messagesJreVersionError = 'Java version error! Please use Java17!'
-
-    icon = "${projectDir}/icons/logo.ico"
-    jvmOptions = ["--module-path .\\lib\\ --add-modules javafx.controls,javafx.media,javafx.swing"]
-}
-
-dependencies {
-//    implementation('com.github.leewyatt:rxcontrols:11.0.3')
-    implementation 'io.vproxy:vfx:1.3.3'
-    implementation 'cn.hutool:hutool-all:5.8.19'
-    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
-    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
-
-    implementation 'org.apache.commons:commons-compress:1.21'
-    implementation 'org.tukaani:xz:1.9'
-    implementation project(path: ':Core')
-    implementation project(path: ':MappingTools')
-
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-}
-
-tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
-}
-
-test {
-    useJUnitPlatform()
-}
-
-
-jar {
-    manifest {
-        attributes(
-                'Main-Class': 'boot.Main'
-
-        )
-    }
-}
-
 
 spotless {
     encoding 'UTF-8'
@@ -93,7 +35,7 @@ spotless {
 
 
     java {
-        target 'src/*/java/**/*.java', 'src/*/scala/**/*.java'
+        target '*/src/*/java/**/*.java'
 
         toggleOffOn()
         importOrderFile('spotless.importorder')
@@ -101,16 +43,5 @@ spotless {
         licenseHeaderFile("licenseHeader")
         eclipse('4.19.0').configFile('spotless.eclipseformat.xml')
     }
-
-}
-
-
-task runZPL(type: JavaExec) {
-
-    classpath = sourceSets.test.runtimeClasspath
-    mainClass = 'boot.Main'
-
-    systemProperty("zpl.rootDir","D:\\DevProject\\JavaProject\\ZeroPointLaunch\\TestResources\\.GTNH")
-    systemProperty("zpl.url","http://127.0.0.1")
 
 }
